Ensure footer does not overlap parsed text.

--- a/parser_tool/static/css/text_parsing_analysis.css
+++ b/parser_tool/static/css/text_parsing_analysis.css
@@ -4,6 +4,7 @@
     line-height: 1.5em;
     white-space: pre-wrap; /* Note: this seems to help with copy & paste to word... */
     color: black; /* Ensure that non-word characters (e.g. space and punctuation) is black */
+    margin-bottom: 400px;
 }
 pre.words {
     color: black;
