--- a/visualizing_russian_tools/static/css/base.css
+++ b/visualizing_russian_tools/static/css/base.css
@@ -1,17 +1,20 @@
 html, body {
     height: 100%;
 }
-.container, .container-fluid {
-    font-family: Lato, sans-serif;
+body {
+    display: flex;
+    min-height: 100vh;
+    flex-direction: column;
 }
-.main {
-    height: auto;
-    min-height: calc(100% - 56px - 250px); /* 56px = navbar, 250px = footer */
+main {
+    flex: 3;
 }
-.footer {
-    width: 100%;
-    height: 250px;
+footer {
+    flex: 1;
     background-color: rgba(0, 0, 0, 0.03);
     border-top: 1px solid #ccc;
     padding: 20px 0;
+}
+.container, .container-fluid {
+    font-family: Lato, sans-serif;
 }
